feat: 최근 본 게시물 패널티 주기